--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-      <h1>Projeto1</h1>
+    <section>
+
+
+
+    <h1>Meus objetivos do ano</h1>
+    <div class="principal-botoes">
+        <button class="botao"> </button>
+        <button class="botao"> </button>
+        <button class="botao"> </button>
+        <button class="botao"> </button>
+    
+    </div>
+
+   </section>  
 </body>
 </html>
