--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-    <h1>Meus objetivos do ano</h1>
+    <h1 class="titulo-principal">Meus objetivos do ano<span>_</span></h1>
     <div class="principal-botoes">
         <button class="botao">Estudar cursos na Alura</button>
         <button class="botao">Criar projetos em JavaScript</button>
