--- a/index.html
+++ b/index.html
@@ -20,6 +20,39 @@
     
     </div>
 
+
+
+<div class="abas-textos">
+    <div class="aba-conteudo" >
+
+        <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+        <h4 class="aba-conteudo-titulo-secundario">TEMPO PARA COMPLETAR OBJETIVO</h4>
+
+ </div>
+    <div class="aba-conteudo" >
+
+        <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em JavaScript</h3>
+        <h4 class="aba-conteudo-titulo-secundario">TEMPO PARA COMPLETAR OBJETIVO</h4>
+
+ </div>
+    <div class="aba-conteudo" >
+
+        <h3 class="aba-conteudo-titulo-principal">Criar 4  portfólio</h3>
+        <h4 class="aba-conteudo-titulo-secundario">TEMPO PARA COMPLETAR OBJETIVO</h4>
+
+ </div>
+   <div class="aba-conteudo" >
+
+          <h3 class="aba-conteudo-titulo-principal">atualize seu currículo</h3>
+          <h4 class="aba-conteudo-titulo-secundario">TEMPO PARA COMPLETAR OBJETIVO</h4>
+
+   </div>
+</div>
+
+
+
+
+
    </section>  
    <script src="./main.js"></script>
 </body>
