--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
  </div>
    <div class="aba-conteudo" >
 
-          <h3 class="aba-conteudo-titulo-principal">atualize seu currículo</h3>
+          <h3 class="aba-conteudo-titulo-principal">Atualize seu currículo</h3>
           <h4 class="aba-conteudo-titulo-secundario">TEMPO PARA COMPLETAR OBJETIVO</h4>
 
    </div>
