--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 
     <h1 class="titulo-principal">Meus objetivos do ano<span>_</span></h1>
+    <div class="conteudo">
     <div class="principal-botoes">
         <button class="botao">Estudar cursos na Alura</button>
         <button class="botao">Criar projetos em JavaScript</button>
@@ -46,9 +47,9 @@
           <h3 class="aba-conteudo-titulo-principal">Atualize seu currículo</h3>
           <h4 class="aba-conteudo-titulo-secundario">TEMPO PARA COMPLETAR OBJETIVO</h4>
 
+      </div>
    </div>
 </div>
-
 
 
 
