--- a/index.html
+++ b/index.html
@@ -28,25 +28,25 @@
 
         <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
         <h4 class="aba-conteudo-titulo-secundario">TEMPO PARA COMPLETAR OBJETIVO</h4>
-
+      <div class="contador"></div>
  </div>
     <div class="aba-conteudo" >
 
         <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em JavaScript</h3>
         <h4 class="aba-conteudo-titulo-secundario">TEMPO PARA COMPLETAR OBJETIVO</h4>
-
+        <div class="contador"></div>
  </div>
     <div class="aba-conteudo" >
 
         <h3 class="aba-conteudo-titulo-principal">Criar 4  portfólio</h3>
         <h4 class="aba-conteudo-titulo-secundario">TEMPO PARA COMPLETAR OBJETIVO</h4>
-
+        <div class="contador"></div>
  </div>
    <div class="aba-conteudo" >
 
           <h3 class="aba-conteudo-titulo-principal">Atualize seu currículo</h3>
           <h4 class="aba-conteudo-titulo-secundario">TEMPO PARA COMPLETAR OBJETIVO</h4>
-
+          <div class="contador"></div>
       </div>
    </div>
 </div>
